...
    return (
      <View style={CS.flexContainer}>
        <Button
          onPress={this.props.onNext}
          borderRadius={2}
          containerStyle={ComponentsStyle.loginButtonNew}
          testID="wizardNext"
        >
          <Text style={ComponentsStyle.loginButtonTextNew}>{i18nService.t('onboarding.welcomeSetup')}</Text>
        </Button>
         <Text style={[CS.linkNew, CS.marginTop4x, CS.centered]} onPress={ this.props.onFinish }>{i18nService.t('onboarding.welcomeLater')}</Text>
      </View>
    )
...

  /**
   * Render
   */
  render() {
    return (
      <View style={[CS.flexContainerCenter]} testID="artTestID">
        <View style={[CS.mindsLayoutBody, CS.backgroundDarkThemePrimary]}>
          {this.getBody()}
        </View>
        <View style={[CS.mindsLayoutFooter, CS.backgroundDarkThemePrimary]}>
          {this.getFooter()}
        </View>
...
