...
      </View>
    );
  };

  getLoginFooter = () => {
    return (
      <TouchableOpacity onPress={this.onPressRegister} testID="registerButton">
        <View style={CS.flexColumnCentered}>
          <Text style={[CS.subTitleText, CS.colorSecondaryText]}>{i18nService.t('auth.haveAccount')}</Text>
          <Text style={[CS.titleText, CS.colorPrimaryText]}>{i18nService.t('auth.createChannel')}</Text>
        </View>
      </TouchableOpacity>
    );
...
